--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "body-scroll-lock": "^3.1.5"
+    "body-scroll-lock": "^3.1.5",
+    "cropperjs": "^1.5.13"
   },
   "babel": {
     "presets": [
