--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   },
   "dependencies": {
     "body-scroll-lock": "^3.1.5",
-    "cropperjs": "^1.5.13"
+    "cropperjs": "^1.5.13",
+    "sortablejs": "^1.15.0"
   },
   "babel": {
     "presets": [
