--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "body-scroll-lock": "^3.1.5",
     "cropperjs": "^1.5.13",
+    "lightbox2": "^2.11.4",
     "sortablejs": "^1.15.0"
   },
   "babel": {
