--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.2",
     "body-scroll-lock": "^3.1.5",
     "cropperjs": "^1.5.13",
     "lightbox2": "^2.11.4",
