--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "body-scroll-lock": "^3.1.5",
     "cropperjs": "^1.6.1",
     "html2canvas": "^1.4.1",
+    "js-datepicker": "^5.18.4",
     "lightbox2": "^2.11.4",
     "sortablejs": "^1.15.2"
   },
